--- a/SVG Animations/index.html
+++ b/SVG Animations/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <div id="string">
-        <svg width="500" height="200">
-            <path d="M 10 100 Q 250 100 490 100" stroke="white" fill="transparent"/>
+        <svg width="1000" height="200">
+            <path id="animated-path" d="M 10 100 Q 500 100 990 100" stroke="white" fill="transparent"/>
         </svg>
     </div>
 
