--- a/Cursor Animation/index.html
+++ b/Cursor Animation/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cursor Animation</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="cursor"></div>
     <div id="main">
-        <div id="cursor">
-            
-        </div>
+      <div id="image">
+        <div id="overlay"></div>
+        <img src="https://images8.alphacoders.com/118/1186452.jpg" alt="">
+      </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    >
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
